--- a/homepage/index.html
+++ b/homepage/index.html
@@ -103,8 +103,9 @@
 <!-- carosel,hero section ends here -->
 
 
-<div class="featured-products">
+<<div class="featured-products">
     <h4>Featured Products</h4>
+
     <div class="product-cards" id="productSlider">
         <div class="card">
             <h5>JBL Endurance Run Sports</h5>
@@ -113,12 +114,12 @@
         </div>
         <div class="card">
             <h5>boAt Airdopes 203</h5>
-            <img src="../images/products/boat203-1.png" alt="boat Rockerz">
+            <img src="../images/products/boat203-1.png" alt="boAt Rockerz">
             <p>₹1,074 <span><strike>₹3,999</strike></span></p>
         </div>
         <div class="card">
             <h5>boAt Rockerz 518</h5>
-            <img src="../images/products/boat518-1.png" alt="boat Rockerz">
+            <img src="../images/products/boat518-1.png" alt="boAt Rockerz">
             <p>₹299 <span><strike>₹499</strike></span></p>
         </div>
         <div class="card">
@@ -138,6 +139,8 @@
     </div>
 </div>
 
+<script src="slider.js"></script>
+
     <!-- Top Products Starts Here -->
 
       <div class="top-products">
@@ -151,7 +154,7 @@
         </ul>
         <div class="top-products-cards">
             <div class="top-product">
-                <img src="/images/Products/jbl660nc-1.png" alt="JBL 600NC">
+                <a href="/Components/productpage.html"><img src="/images/Products/jbl660nc-1.png" alt="JBL 600NC"></a>
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
@@ -159,22 +162,23 @@
                     <h6>JBL Live 660NC</h6>
                     <p>Wireless Over-Ear NC Headphones</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">₹9,999 <span><strike>₹14,999</strike></span></p>
+                    
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat518-1.png" alt="boat">
+                <img src="/images/Products/boat518-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>boAt Rockerz</h6>
+                    <h6>boAt Rockerz 518</h6>
                     <p>On-Ear Wireless Headphones</p>
                     <hr>
-                    <p class="price">$1,299 <span><strike>$3,990</strike></span></p>
+                    <p class="price">₹1,299 <span><strike>₹3,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -195,22 +199,22 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat110-1.png" alt="boat">
+                <img src="/images/Products/boat110-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>boAt BassHeada 110</h6>
-                    <p>In-Ear Wired Headphones</p>
+                    <h6>boAt Bassheads 110</h6>
+                    <p>In-Ear Wired Earphones</p>
                     <hr>
-                    <p class="price">$499<span><strike>$999</strike></span></p>
+                    <p class="price">₹499 <span><strike>₹999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat410-1.png" alt="boat">
+                <img src="/images/Products/boat410-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -219,7 +223,7 @@
                     <h6>boAt Rockerz 410</h6>
                     <p>Bluetooth & Wired On-Ear Headphones</p>
                     <hr>
-                    <p class="price">$1,599<span><strike>$2,990 </strike></span></p>
+                    <p class="price">₹1,599 <span><strike>₹2,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -232,9 +236,9 @@
                             class="fa-regular fa-star"></i>
                     </div>
                     <h6>JBL Live 200BT</h6>
-                    <p>In-Ear Wireless Neckbands</p>
+                    <p> In-Ear Wireless Neckbands</p>
                     <hr>
-                    <p class="price">$3,699 <span><strike>$5,299</strike></span></p>
+                    <p class="price">₹3,699 <span><strike>₹2,599</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -249,13 +253,14 @@
                     <h6>Sony WH-XB910N</h6>
                     <p>Wireless Over-Ear Headphones</p>
                     <hr>
-                    <p class="price">$13,489<span><strike>$5,999</strike></span></p>
+                    <p class="price">₹13,489 <span><strike>₹19,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
+
             <div class="top-product">
-                <img src="/images/Products/jbl760nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/jbl760nc-1.png" alt="JBL 760NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -264,7 +269,7 @@
                     <h6>JBL Tune 760NC</h6>
                     <p>Wireless Over-Ear NC Headphones</p>
                     <hr>
-                    <p class="price">$5,999<span><strike>$7,999</strike></span></p>
+                    <p class="price">₹5,999 <span><strike>₹7,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -279,22 +284,22 @@
                     <h6>boAt Rockerz 255</h6>
                     <p>In-Ear Wireless Neckbands</p>
                     <hr>
-                    <p class="price">$899 <span><strike>$2,990</strike></span></p>
+                    <p class="price">₹899 <span><strike>₹2,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/jbl100-1.png" alt="JBL ">
+                <img src="/images/Products/jbl100-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
                     <h6>JBL Wave 100</h6>
-                    <p> In-Ear Truly Wireless Earbuds</p>
+                    <p>In-Ear Truly Wireless Earbuds</p>
                     <hr>
-                    <p class="price">$2,999 <span><strike>$6,999</strike></span></p>
+                    <p class="price">₹2,999 <span><strike>₹6,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -309,7 +314,7 @@
                     <h6>Sony WF-1000XM4</h6>
                     <p>Wireless In-Ear NC Headphones</p>
                     <hr>
-                    <p class="price">$19,990 <span><strike>$24,999</strike></span></p>
+                    <p class="price">₹19,990 <span><strike>₹24,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -436,59 +441,81 @@
   <!-- footer ends here -->
 
 <script>
-    const slider = document.getElementById('productSlider');
-    const visibleCount = 5;
-    let cards = Array.from(slider.children);
+   const slider = document.getElementById('productSlider');
+const visibleCount = 5;
+let cards = Array.from(slider.children);
 
-    // Duplicate for seamless loop
-    cards.forEach(card => slider.appendChild(card.cloneNode(true)));
+// Clone cards for looping effect
+cards.forEach(card => slider.appendChild(card.cloneNode(true)));
 
-    let allCards = Array.from(slider.children);
-    let currentIndex = visibleCount;
+let allCards = Array.from(slider.children);
+let currentIndex = visibleCount;
 
-    function updateSliderPosition() {
-        const cardWidth = allCards[0].offsetWidth + 20; // card + margin
-        const offset = currentIndex - Math.floor(visibleCount / 2);
-        slider.style.transform = translateX(${-offset * cardWidth}px);
-    }
+// Set dynamic width for container
+const cardWidth = allCards[0].offsetWidth + 20;
+slider.style.width = `${allCards.length * cardWidth}px`;
 
-    function updateCardClasses() {
-        allCards.forEach((card, i) => {
-            card.classList.remove('active', 'medium');
-            if (i === currentIndex) {
-                card.classList.add('active');
-            } else if (i === currentIndex - 1 || i === currentIndex + 1) {
-                card.classList.add('medium');
-            }
-        });
-    }
+function updateSliderPosition() {
+    const offset = currentIndex - Math.floor(visibleCount / 2);
+    slider.style.transform = `translateX(${-offset * cardWidth}px)`;
+}
 
-    function slideLeftToRight() {
-        currentIndex++;
-        if (currentIndex >= allCards.length - visibleCount) {
-            slider.style.transition = 'none';
-            currentIndex = visibleCount;
-            updateSliderPosition();
-
-            requestAnimationFrame(() => {
-                requestAnimationFrame(() => {
-                    slider.style.transition = 'transform 0.6s ease';
-                    currentIndex++;
-                    updateSliderPosition();
-                    updateCardClasses();
-                });
-            });
-        } else {
-            updateSliderPosition();
-            updateCardClasses();
+function updateCardClasses() {
+    allCards.forEach((card, i) => {
+        card.classList.remove('active', 'medium');
+        if (i === currentIndex) {
+            card.classList.add('active');
+        } else if (i === currentIndex - 1 || i === currentIndex + 1) {
+            card.classList.add('medium');
         }
-    }
+    });
 
-    // Init styles and animation
-    slider.style.transition = 'transform 0.6s ease';
+    const indicators = document.querySelectorAll('.indicators button');
+    indicators.forEach((btn, i) => {
+        btn.classList.toggle('active', i === currentIndex % visibleCount);
+    });
+}
+
+function slideLeftToRight() {
+    currentIndex++;
+    if (currentIndex >= allCards.length - visibleCount) {
+        slider.style.transition = 'none';
+        currentIndex = visibleCount;
+        updateSliderPosition();
+        requestAnimationFrame(() => {
+            requestAnimationFrame(() => {
+                slider.style.transition = 'transform 0.6s ease';
+                currentIndex++;
+                updateSliderPosition();
+                updateCardClasses();
+            });
+        });
+    } else {
+        updateSliderPosition();
+        updateCardClasses();
+    }
+}
+
+// Start animation
+slider.style.transition = 'transform 0.6s ease';
+updateSliderPosition();
+updateCardClasses();
+setInterval(slideLeftToRight, 2000);
+
+// Optional: Add indicator click support
+document.querySelectorAll('.indicators button').forEach((btn, i) => {
+    btn.addEventListener('click', () => {
+        currentIndex = visibleCount + i;
+        updateSliderPosition();
+        updateCardClasses();
+    });
+});
+
+// Optional: Update on window resize
+window.addEventListener('resize', () => {
     updateSliderPosition();
-    updateCardClasses();
-    setInterval(slideLeftToRight, 2000);
+});
 </script>
+
 </body>
 </html>
